--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </div>
   </div>
   <script src="app/app.js"></script>
+  <script src="app/services.js"></script>
   <script src="app/controller.js"></script>
   <script src="app/modalController.js"></script>
 </body>
