Refactor milestone construction

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2 class="w3-container text-center w3-blue">{{ projectTitle }}</h2>
       <div class="w3-row">
 
-        <div class="w3-col l3 w3-container" ng-repeat="(key, value) in status">
+        <div class="w3-col l3 w3-container" ng-repeat="(key, value) in issuesWithMilestone">
 
           <h4 class="w3-container w3-teal text-center">{{ key }}</h4>
 
