--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div ng-controller="MainController">
       <div class="w3-row">
 
-        <div class="w3-col l3 w3-container" ng-repeat="(key, value) in issuesWithMilestone">
+        <div class="w3-col l3 w3-container" ng-repeat="(key, value) in issuesByMilestone">
 
           <h4 class="w3-container w3-teal text-center">{{ key }}</h4>
 
