Use factory to provide default project info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div ng-app="Gitduck">
 
     <div class="w3-container" style="margin-top:3px" ng-controller="navbarController">
-      <button style="margin:10px" ng-repeat="title in projectTitles" class="w3-btn w3-round-xxlarge" ng-class="toggleClass(title)" ng-click="setMaster(title)" >{{ title }}</button>
+      <button style="margin:10px" ng-repeat="title in projectTitles" class="w3-btn w3-round-xxlarge w3-blue">{{ title }}</button>
     </div>
 
     <div ng-controller="MainController">
