--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   </div>
   <script src="app/app.js"></script>
   <script src="app/services.js"></script>
-  <script src="app/controller.js"></script>
-  <script src="app/modalController.js"></script>
   <script src="app/navbar/controller.js"></script>
+  <script src="app/main/controller.js"></script>
+  <script src="app/modal/controller.js"></script>
 </body>
 </html>
