Move static file into static folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>Tech team on-going projects overview</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="w3.css">
-  <script src="bower_components/angularjs/angular.min.js"></script>
-  <script src="bower_components/underscore/underscore-min.js"></script>
+  <link rel="stylesheet" href="static/css/w3.css">
+  <script src="static/js/angular.min.js"></script>
 </head>
 <body>
   <div ng-app="Gitduck">
