Change index style

--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
     <div ng-controller="MainController">
       <div class="w3-row">
 
-        <div class="w3-col l3 w3-container" ng-repeat="(key, value) in issuesByMilestone">
+        <div class="w3-col l3 w3-border w3-round-xxlarge w3-grey w3-container" ng-repeat="(key, value) in issuesByMilestone">
 
-          <h4 class="w3-container w3-teal text-center">{{ key }}</h4>
+          <h5 class="w3-container w3-center">{{ key }}</h5>
 
           <div style="overflow-y:auto height:100%">
-            <div class="w3-card-2" ng-repeat="issue in value">
-              <h6 class="w3-container w3-deep-orange">
-                <a href="{{ issue.html_url }}">{{ issue.title }}</a>
-              </h6>
-              <p class="w3-container">{{ issue.body }}<span class="small w3-btn" ng-click="showModal(issue)">details</button>
+            <div style="margin:10px 0" class="w3-container w3-card-2 w3-round-xlarge w3-light-grey" ng-repeat="issue in value">
+              <p><b>{{ issue.title }}</b></p>
+              <a style="text-decoration: none" class="w3-container" ng-click="showModal(issue)">{{ issue.body }}
                 <span class="w3-tag w3-right w3-small w3-blue">{{ issue.assignee.login }}</span>
-                </p>
+                </a>
             </div>
           </div>
 
@@ -37,7 +35,7 @@
         <div ng-controller="ModalController">
           <div id="modal" class="w3-modal">
             <div class="w3-modal-content">
-              <header class="w3-container w3-blue"><span ng-click="closeModal()" class="w3-closebtn">x</span><h2>Hi There {{ issue.title }}</h2></header>
+              <header class="w3-container w3-blue"><span ng-click="closeModal()" class="w3-closebtn">x</span><h2>{{ issue.title }}</h2></header>
               <div class="w3-container">
                 <p>{{ issue.body }}</p>
               </div>
