Add hover animations

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div ng-controller="MainController">
       <div class="w3-row">
 
-        <div class="w3-col l3 w3-border w3-round-xxlarge w3-grey w3-container" ng-repeat="(key, value) in issuesByMilestone">
+        <div class="w3-col l3 w3-border w3-round-xxlarge w3-grey w3-container w3-hover-shadow" ng-repeat="(key, value) in issuesByMilestone">
 
           <h5 class="w3-container w3-center">{{ key }}</h5>
 
           <div style="overflow-y:auto height:100%">
-            <div style="margin:10px 0" class="w3-container w3-card-2 w3-round-xlarge w3-light-grey" ng-repeat="issue in value">
+            <div style="margin:10px 0" class="w3-container w3-hover-white w3-card-2 w3-round-xlarge w3-light-grey" ng-repeat="issue in value">
               <p><b>{{ issue.title }}</b></p>
               <a style="text-decoration: none" class="w3-container" ng-click="showModal(issue)">{{ issue.body }}
                 <span class="w3-tag w3-right w3-small w3-blue">{{ issue.assignee.login }}</span>
